submodule cleanup and re-added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "client"]
 	path = client
-	url = https://github.com/1337ipJbP7U9mi9cdLngL3g5Napum7tWzM/PaperWalletChecker
+	url = git@github.com:1337ipJbP7U9mi9cdLngL3g5Napum7tWzM/PaperWalletChecker.git
+	branch = master
